[FIX] Fixed m2o problem because of '/' in id. [FIX] Fixed wrap for error message.

--- a/addons/openerp/static/css/style.css
+++ b/addons/openerp/static/css/style.css
@@ -448,6 +448,7 @@ table.errorbox {
 	padding: 0px 5px 0px 0px;
 	text-align: center;
 	color: #333333;
+    white-space: normal;
 }
 
 .login_error_message {
